--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -37,9 +37,9 @@ h2{
     text-align: justify;
     display: inline-block;
     position:relative;
-    top:-100px;
+    top:-30px;
     vertical-align: top;
-    margin:0 3% 0 3%;
+    margin:0 3% -10px 3%;
     height:500px;
     box-shadow: 0px 1px 30px 0px rgba(50, 50, 50, 1);
 }
@@ -73,4 +73,49 @@ h2{
 
 #targetAm{
     background-color: #ffff9d;
+}
+
+#txtFun{
+    width: 100%;
+    height:500px;
+    background: url('../images/banner1.jpg');
+    background-attachment: fixed;
+    background-size: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    margin-top:20px;
+}
+
+#txtFun{
+    font-size: 50px;
+    font-style: italic;
+}
+
+#tabs{
+    width: 70%;
+    height: 300px;
+    margin:auto;
+    top:300px;
+}
+
+#tab1 form>div{
+    display: inline-block;
+    width: 30%;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.item, .owl-item{
+    display: inline-block;
+}
+
+.item img{
+    margin:auto;
+    width:70%;
+}
+#fotosContainer>div{
+    display: none;
 }
