--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -17,7 +17,6 @@ html,body{
     width: 100%;
     background:url('../images/banner3.jpg');
     background-size: 100% auto;
-    background-attachment: fixed;
 }
 
 #targetContainer{
@@ -40,19 +39,13 @@ h2{
     top:-30px;
     vertical-align: top;
     margin:0 3% -10px 3%;
-    height:500px;
+    height:auto;
     box-shadow: 0px 1px 30px 0px rgba(50, 50, 50, 1);
 }
 
-.target img{
-    width: 100%;
-    position:absolute;
-    bottom: 0;
-}
 
 .target>div{
     background-color: white;
-    height: 70px;
     text-align: center;
     font-size: 30px;
     display: flex;
@@ -60,11 +53,32 @@ h2{
     align-content: center;
     flex-direction: column;
     font-family: "Roboto Slab", "Times New Roman", serif;
-
+    padding-top:10px;
 }
 
-.target p{
+.target>div>img{
+    height: 70px;
+    display: block;
+    margin:auto;
+}
+
+.target button{
+    border:none;
+    background-color: white;
     padding:10px;
+    margin: 10px auto 10px;
+    display: block;
+    cursor:pointer;
+    font-size: 18px;
+    transition: all 0.2s linear;
+}
+
+.target button#cmdMoreRentals:hover{
+    color:#84c89a;
+}
+
+.target button#cmdMoreTours:hover{
+    color:#ffff9d;
 }
 
 #targetVerde{
@@ -79,7 +93,6 @@ h2{
     width: 100%;
     height:500px;
     background: url('../images/banner1.jpg');
-    background-attachment: fixed;
     background-size: 100%;
     text-align: center;
     display: flex;
