--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -132,3 +132,12 @@ h2{
 #fotosContainer>div{
     display: none;
 }
+
+#negro{
+    width: 100%;
+    height: 100%;
+    position:fixed;
+    background-color: rgba(0,0,0,0.9);
+    z-index: 100000000;
+    top:0;
+}
