avances del 24 de noviembre

--- a/public_html/css/rentals.css
+++ b/public_html/css/rentals.css
@@ -12,7 +12,7 @@ html,body{
 }
 
 #bannerContainer{
-    background:url('../images/bannerAbout.jpg');
+    background:url('../images/bannerRentals.jpg');
     position:relative;
     margin:0;
     top:0;
