--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -157,3 +157,36 @@ h2{
     width: 70%;
     margin:auto;
 }
+
+#imgContainer{
+    position:relative;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-top:20px;
+
+}
+
+#imgContainer>img{
+    display: inline-block;
+    width: 45%;
+}
+
+#content a {
+    text-decoration: none;
+    display: block;
+    margin: auto;
+    border: none;
+    padding: 10px;
+    text-align:center;
+    width: 100px;
+    margin-top:20px;
+    transition:all 0.2s linear;
+    color:#3c763d;
+    background-color: white;
+}
+
+#content a:hover{
+    background-color:#3c763d;
+    color:white;
+}
