optimizacion de algunas imagenes y para moviles

--- a/public_html/css/about.css
+++ b/public_html/css/about.css
@@ -42,3 +42,9 @@ html,body{
     flex-direction: column;
     margin-top:20px;
 }
+
+@media screen and (max-width: 800px){
+    #bannerContainer, #imgContainer{
+        height: 250px;
+    }
+}
