--- a/public_html/css/header.css
+++ b/public_html/css/header.css
@@ -81,3 +81,56 @@ nav a{
 nav a:hover{
     color:#ffff9d;
 }
+
+#cmdMenu{
+    background-color: transparent;
+    border:none;
+    cursor:pointer;
+    display: none;
+}
+
+@media screen and (max-width:800px ){
+    header{
+        padding-bottom:10px;
+    }
+    header nav{
+        display: none;
+        position:absolute;
+        background-color: rgba(0,0,0,0.4);
+        width: 100%;
+        left:0;
+        top:84px;
+    }
+
+    header nav a{
+        display:block;
+        text-align: left;
+    }
+
+    #logoContainer{
+        text-align: left;
+        width: 30%;
+        margin-left:5%;
+    }
+
+    #logoContainer a img{
+        width: 70px;
+    }
+
+    #headerContainer>div{
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    #headerContainer>div#navContainer{
+        width: 50%;
+        text-align: right;
+        position:static;
+    }
+
+    #cmdMenu{
+        display: block;
+        position:absolute;
+        right: 10px;
+    }
+}
