--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -190,3 +190,30 @@ h2{
     background-color:#3c763d;
     color:white;
 }
+
+@media screen and (max-width:800px ){
+    #bannerContainer{
+        height: 250px;
+        background-repeat: no-repeat;
+    }
+
+    .target{
+        width: 90%;
+        top:0;
+        display: block;
+        margin:auto;
+        margin-bottom:40px;
+        padding-bottom:1px;
+    }
+
+    #txtFun{
+        height: 250px;
+        background-repeat: no-repeat;
+    }
+
+    #negro>div{
+        width: 90%;
+        margin:0 5% 0 5%;
+        padding:0;
+    }
+}
