--- a/public_html/css/tour.css
+++ b/public_html/css/tour.css
@@ -156,3 +156,24 @@ html,body{
     font-size: 40px;
     margin:20px 0 20px 0;
 }
+
+@media screen and (max-width: 800px){
+    #bannerContainer{
+        height: 250px;
+    }
+
+    .container{
+        width: 100%;
+    }
+
+    .container>div{
+        width: 90%;
+        margin:20px auto 20px auto;
+
+    }
+
+    #puntosContainer>div{
+        width: 90%;
+        margin:20px auto 20px auto;
+    }
+}
