--- a/public_html/css/tours.css
+++ b/public_html/css/tours.css
@@ -50,8 +50,7 @@ html,body{
     padding-bottom:50px;
 }
 
-#scooterTour{
-    background: url('../images/scooterTour.jpg');
+.tour{
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width:30%;
@@ -70,4 +69,20 @@ html,body{
     height: 100%;
     text-align: center;
     font-size: 20px;
+}
+
+@media screen and (max-width: 800px){
+    #bannerContainer{
+        height: 250px;
+    }
+
+    .tour{
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 550px){
+    .tour{
+        width: 100%;
+    }
 }
