https agregada para la creación de ruta

--- a/public_html/css/about.css
+++ b/public_html/css/about.css
@@ -52,6 +52,42 @@ html,body{
     display: inline-block;
 }
 
+#bookContainer{
+    width: 100%;
+    position:fixed;
+    bottom: 0;
+    left:0;
+    background-color: white;
+    border-top:1px solid black;
+    height: 70px;
+}
+
+#bookContainer>div{
+    display:inline-block;
+    width: 45%;
+    height: 70px;
+    vertical-align: top;
+}
+
+#cmdBookNow{
+    position:absolute;
+    right:20px;
+    top:15px;
+    text-decoration: none;
+    color:white;
+    background-color: #3c763d;
+    border:white 1px solid;
+    transition: all 0.2s linear;
+    padding:10px;
+    border-radius: 5px;
+}
+
+#cmdBookNow:hover{
+    background-color: white;
+    border:#3c763d 1px solid;
+    color:#3c763d;
+}
+
 @media screen and (max-width: 800px){
     #bannerContainer, #imgContainer{
         height: 250px;
